external-crates/move/crates/move-unit-test/tests/test_sources/string_abort.exp
Running Move unit tests
[ FAIL    ] 0x6::M::unexpected_abort_in_native_function

Test failures:

Failures in 0x6::M:

┌── unexpected_abort_in_native_function ──────
│ error[E11001]: test failure
│     ┌─ string.move:120:16
│     │
│ 120 │     native fun internal_sub_string(v: &vector<u8>, i: u64, j: u64): vector<u8>;
│     │                ^^^^^^^^^^^^^^^^^^^
│     │                │
│     │                Test was not expected to error, but it aborted with code 1 originating in the module std::string rooted here
│     │                In this function in std::string
│ 
│ 
│ stack trace
│ 	M::abort_in_native(tests/test_sources/string_abort.move:8)
│ 	M::unexpected_abort_in_native_function(tests/test_sources/string_abort.move:4)
│ 
└──────────────────

Test result: FAILED. Total tests: 1; passed: 0; failed: 1
